--- a/donate.html
+++ b/donate.html
@@ -23,7 +23,7 @@
             <div class="row">
                 <div class="donatebox">
                     <i class="fas fa-user" style="font-size: 380%; text-align: center;"></i>
-                    <h2>"Think for good and donate for needy person."</h2>
+                    <h2>""Always give without remembering and always receive without forgetting."</h2>
                     
                     <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_HincbLQjXYCkSd" async> </script> </form>
                 </div>
