--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
     
                     <form class="contact100-form validate-form" data-netlify="true">
                         <span class="contact100-form-title">
-                            Get in touch
+                            Contact us
                         </span>
     
                         <div class="wrap-input100 validate-input" data-validate = "Name is required">
